# ZerodhaEMAScaneerC-

./: CMakeLists.txt  OrderLog.txt  README.md  TradeSettings.csv  build.bat  instruments.csv  run.bat
include/: csv_parser.h  zerodha_client.h
src/: csv_parser.cpp  main.cpp  zerodha_client.cpp
